[tool.poetry]
name = "gitprune"
version = "0.1.0"
description = "Small tool to clean your local GIT branches"
authors = ["Allex Veldman <allexveldman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=2.7"
fire = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
