[tool.poetry]
name = "gitprune"
version = "0.1.0"
description = "Small tool to clean your local GIT branches"
authors = ["Allex Veldman <allexveldman@gmail.com>"]
license = "MIT"
packages = [
    { include = "gitprune.py"}
]


[tool.poetry.dependencies]
python = ">=3.7"
fire = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[tool.poetry.scripts]
gitprune = 'gitprune:main'

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
