[tool.poetry]
name = "gitprune"
version = "0.1.1"
description = "Small tool to clean your local GIT branches"
authors = ["Allex Veldman <allexveldman@gmail.com>"]
license = "MIT"
packages = [
    { include = "gitprune.py"}
]


[tool.poetry.dependencies]
python = ">=3.7"
fire = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.971"

[tool.poetry.scripts]
gitprune = 'gitprune:main'

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
